--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "اهلا بكم في تنصيب سورس صيد اليوزرات !",
   "logo": "https://te.legra.ph/file/3333cf53ce0d9301f6134.png",
   "stack": "container",
-  "repository": "https://github.com/dhsgggggg/aasse",
+  "repository": "https://github.com/dhsgggggg/assaa",
   "keywords": ["python", "chatbot", "telegrambot"],
   "website": "https://t.me/special_anime9",
   "env": {
